css/style.css
:root {
    --main-bg-color: #000000;
    --border-color: #fcc42a;
    --memo-bg-color: #fcc42a29;
    --navbar-hover: #ed8932;
}

@font-face {
  font-family: "pixel";
  src: url(../assets/Advanced_Pixel-7.woff2) format("woff2");
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "pixel";
}

main {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background: var(--main-bg-color);
}

.board {
  position: absolute;
  top: 20px;
  bottom: 10px;
  left: 10px;
  right: 10px;
  /* border: 1px solid white; */
  overflow: hidden;
}

.memo {
  position: absolute;
  border: 1px solid var(--border-color);
  background-color: var(--memo-bg-color);
  will-change: left top;
}

.memoTitle{
  position: absolute;
  left:20px;
  font-size: 20px;
  color: var(--border-color);
  width: calc(100% - 20px);
}

.move {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 30px;
  border-bottom: 1px solid var(--border-color);
  cursor: grab;
}
.close {
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  width: 16px;
  color: var(--border-color);
  text-align: center;
  font-weight: bold;
  border-right: 1px solid var(--border-color);
  background-color: black;
  cursor: pointer;
}
.close::selection {
  color: var(--border-color);
}

.resize {
  position: absolute;
  bottom: 0;
  right: 0;
  width: 10px;
  height: 10px;
  border-top: 1px solid var(--border-color);
  border-left: 1px solid var(--border-color);
  z-index: 0;
  cursor: se-resize;
}

.drag {
  position: absolute;
  background-color: white;
  opacity: 0.2;
}

.selection {
  position: absolute;
  background-color: rgba(255, 255, 255, 0.372);
  pointer-events: none;
}

.text {
  position: absolute;
  top: 30px;
  width: 100%;
  height: calc(100% - 30px);
  z-index: 0;
  resize: none;
  background-color: transparent;
  color: var(--border-color);
  font-family: "pixel";
  font-size: 26px;
  padding: 5px;
  outline: none;
}

#canvas {
  position: absolute;
  top: 10px;
  left: 10px;
  width: calc(100% - 20px);
  height: calc(100% - 20px);
  z-index: -1;
}

.head {
  z-index: 1;

  color: white;

  display: flex;
  align-items: center;
  position: fixed;

  width: 100%;
  height: 40px;

  background-color: var(--memo-bg-color);
}

.head > ul {
  display: flex;
  align-items: center;
  justify-content: space-between;
  list-style: none;
  height: 100%;
  width: 100%;
}

.head > ul > li {
  display: flex;
  align-items: center;
  padding: 3px;
  margin: 10px;
}

.head > ul > li > a > img {
  cursor: pointer;
  width: 15px;
  height: 15px;
  margin: 15px;
  opacity: 0.7;
  transition: 0.2s all;
}

.head > ul > li > a > img:hover {
  opacity: 1;
}

.social-cards {
  border-radius: 10px;
}

.theme-container{
  margin: 0px;
  background-color: black;
  border-radius: 10px;
  padding: 5px;
  display:flex;
}

.theme-circles{
  width: 10px;
  height: 10px;
  border-radius: 100%;
  margin: 5px;
  border: none;
  cursor: pointer;
}

.c1{
    background-color: #FFE27D;
}

.c2{
  background-color: #64E3FF;
}

.c3{
  background-color: #9042ff;
}

.c4{
    background-color: #B4FF39;
}

.close-cards{
  position: absolute;
  right: 0;
}

.close-cards-btn{
  cursor: pointer;
  font-size: 20px;
  width: 20px;
  color: var(--border-color);
  border: 1px solid var(--border-color);
  background: var(--memo-bg-color);
  margin-top: 70px;
  margin-right: 5px;
}

